source-kafka/src/snapshots/source_kafka__discover__tests__avro record with scalar compound key.snap
---
source: src/discover.rs
expression: snap
---
["/firstKey","/secondKey","/thirdKey"]
{
  "type": "object",
  "if": {
    "required": [
      "_meta"
    ],
    "properties": {
      "_meta": {
        "required": [
          "op"
        ],
        "properties": {
          "op": {
            "const": "d"
          }
        }
      }
    }
  },
  "then": {
    "reduce": {
      "delete": true,
      "strategy": "merge"
    }
  },
  "required": [
    "_meta",
    "firstKey",
    "secondKey"
  ],
  "properties": {
    "_meta": {
      "type": "object",
      "required": [
        "offset",
        "op",
        "partition",
        "topic"
      ],
      "properties": {
        "offset": {
          "description": "The offset of the message within the partition",
          "type": "integer"
        },
        "op": {
          "description": "Change operation type: 'c' Create/Insert, 'u' Update, 'd' Delete.",
          "enum": [
            "c",
            "u",
            "d"
          ]
        },
        "partition": {
          "description": "The partition the message was read from",
          "type": "integer"
        },
        "topic": {
          "description": "The topic the message was read from",
          "type": "string"
        }
      }
    },
    "firstKey": {
      "description": "the first key field",
      "type": "string"
    },
    "secondKey": {
      "description": "the second key field",
      "type": "integer"
    },
    "thirdKey": {
      "description": "the third key field, which is an enum with a default value",
      "default": "a",
      "type": "string",
      "enum": [
        "a",
        "b",
        "c"
      ]
    }
  },
  "x-infer-schema": true
}
