source-kafka/src/snapshots/source_kafka__discover__tests__nested avro record with scalars.snap
---
source: src/discover.rs
expression: snap
---
["/firstKey","/nestedRecord/secondKeyNested","/nestedRecord/thirdKeyNested"]
{
  "type": "object",
  "if": {
    "required": [
      "_meta"
    ],
    "properties": {
      "_meta": {
        "required": [
          "op"
        ],
        "properties": {
          "op": {
            "const": "d"
          }
        }
      }
    }
  },
  "then": {
    "reduce": {
      "delete": true,
      "strategy": "merge"
    }
  },
  "required": [
    "_meta",
    "firstKey",
    "nestedRecord"
  ],
  "properties": {
    "_meta": {
      "type": "object",
      "required": [
        "offset",
        "op",
        "partition",
        "topic"
      ],
      "properties": {
        "offset": {
          "description": "The offset of the message within the partition",
          "type": "integer"
        },
        "op": {
          "description": "Change operation type: 'c' Create/Insert, 'u' Update, 'd' Delete.",
          "enum": [
            "c",
            "u",
            "d"
          ]
        },
        "partition": {
          "description": "The partition the message was read from",
          "type": "integer"
        },
        "topic": {
          "description": "The topic the message was read from",
          "type": "string"
        }
      }
    },
    "firstKey": {
      "description": "the first key field",
      "type": "string"
    },
    "nestedRecord": {
      "type": "object",
      "required": [
        "secondKeyNested",
        "thirdKeyNested"
      ],
      "properties": {
        "secondKeyNested": {
          "description": "the second key field",
          "type": "integer"
        },
        "thirdKeyNested": {
          "description": "the third key field",
          "type": "string",
          "contentEncoding": "base64"
        }
      }
    }
  },
  "x-infer-schema": true
}
