source-kafka/src/snapshots/source_kafka__discover__tests__nested json object.snap
---
source: src/discover.rs
expression: snap
---
["/firstKey","/nestedObject/secondKeyNested","/nestedObject/thirdKeyNested"]
{
  "type": "object",
  "if": {
    "required": [
      "_meta"
    ],
    "properties": {
      "_meta": {
        "required": [
          "op"
        ],
        "properties": {
          "op": {
            "const": "d"
          }
        }
      }
    }
  },
  "then": {
    "reduce": {
      "delete": true,
      "strategy": "merge"
    }
  },
  "required": [
    "_meta",
    "firstKey",
    "nestedObject"
  ],
  "properties": {
    "_meta": {
      "type": "object",
      "required": [
        "offset",
        "op",
        "partition",
        "topic"
      ],
      "properties": {
        "offset": {
          "description": "The offset of the message within the partition",
          "type": "integer"
        },
        "op": {
          "description": "Change operation type: 'c' Create/Insert, 'u' Update, 'd' Delete.",
          "enum": [
            "c",
            "u",
            "d"
          ]
        },
        "partition": {
          "description": "The partition the message was read from",
          "type": "integer"
        },
        "topic": {
          "description": "The topic the message was read from",
          "type": "string"
        }
      }
    },
    "firstKey": {
      "type": "string"
    },
    "nestedObject": {
      "type": "object",
      "required": [
        "secondKeyNested",
        "thirdKeyNested"
      ],
      "properties": {
        "secondKeyNested": {
          "type": "integer"
        },
        "thirdKeyNested": {
          "type": "boolean"
        }
      }
    }
  },
  "x-infer-schema": true
}
